[package]
name = "docs"
version = "0.1.0"
edition = "2024"
llicense = "MIT OR Apache-2.0"
description = "Search your man pages and tldr pages with fzf"
homepage = "https://github.com/FGRCL/docs"
repository = "https://github.com/FGRCL/docs"
readme = "https://github.com/FGRCL/docs"
keywords = ["fzf", "docs", "man", "tldr", "help", "search"]
categories = ["command-line-utilities", "command-line-interface"]

[dependencies]
regex = "1.12.3"
